# kdiff

./: .gitignore  pyproject.toml  readme.md  setup.py
examples/: ns-label.yaml
kdiff/: cli.py
